tests/samples/invalid/multiple_errors.pn
fn main()
{
	var a;
	var b;
}
